fix scrollto height on mobile

--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -65,6 +65,9 @@
         /deep/ .short & {
           bottom: 34px !important;
         }
+        @media (max-width: $break-medium) {
+          content: none;
+        }
       }
       &:hover:after {
         width: 100%;
